Hiddent he dark mode feature as it is not release to avoid confusion

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,6 +38,7 @@
   display: flex;
   gap: 0.45em;
   margin-right: 1em;
+  display: none;
 }
 
 .header .mode-icons .selected {
